--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
+lyricsgenius
 motor
 numpy
 pillow
@@ -21,6 +22,6 @@ speedtest-cli
 spotipy
 tgcrypto
 unidecode
-yt-dlp
+yt-dlp==2023.12.30
 youtube-search
 youtube-search-python
