--- a/requirements.txt
+++ b/requirements.txt
@@ -10,18 +10,18 @@ heroku3
 lyricsgenius
 motor
 numpy
-pillow==9.5.0
+pillow==10.3.0
 psutil
 py-tgcalls==0.9.7
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
-pyyaml
+pyyaml==6.0.1
 requests
 speedtest-cli
 spotipy
 tgcrypto
 unidecode
-yt-dlp==2024.3.10
+yt-dlp
 youtube-search
 youtube-search-python
